# ChameleonOS

./: .env.example  .gitignore  README.md  SETUP-WINDOWS.md  docker-compose.yml  package-lock.json  package.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/src/aos_api/: config.py  dependencies.py  main.py  redis_client.py  redis_keys.py
apps/api/src/aos_api/agent/: graph.py  state.py  worker.py
apps/api/src/aos_api/agent/nodes/: background_enricher.py  insight_generator.py  optimizer.py  variation_selector.py  vibe_classifier.py
apps/api/src/aos_api/agent/tools/: referrer_fetcher.py
apps/api/src/aos_api/db/: models.py  seed.py  session.py
apps/api/src/aos_api/routes/: dashboard.py  handshake.py  track.py
apps/api/src/aos_api/schemas/: dashboard.py  handshake.py  track.py
apps/api/src/aos_api/services/: event_service.py  session_service.py  tenant_service.py  variation_service.py  vibe_classifier.py
apps/dashboard/: package.json
apps/dashboard/src/app/: layout.tsx  page.tsx
apps/dashboard/src/components/: source-table.tsx  stats-cards.tsx  variation-chart.tsx
apps/dashboard/src/lib/: api.ts
apps/demo-store/: bold.html  casual.html  index.html  minimalist.html  package.json  thank-you.html
apps/demo-store/css/: style.css
scripts/: dev.sh  simulate-demo.py  test-e2e.sh
